# ai-code-builder-V2

./: .env.example  README.md
backend/: .env.example  AGENT_GUIDE.md  AGENT_PROMPT.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_dataset_metadata.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: code_cache.py  code_library.py  execution.py  instructions_library.py  router.py  upload.py
backend/app/config/: settings.py
backend/app/db/: engine.py  models.py
backend/app/prompts/: codegen_prompt.py  refined_instructions_sample_data.sha256  refined_instructions_sample_data.txt  refinement_prompt.py  sample_data_generation_instructions.txt
backend/app/sandbox/: runner.py
backend/app/schemas/: code_cache.py  code_library.py  instructions_library.py  upload.py
backend/app/services/: code_cache_service.py  code_library_service.py  codegen_service.py  dataset_metadata_service.py  file_service.py  instruction_service.py  instructions_library_service.py
backend/app/session/: session_store.py
backend/app/utils/: anthropic_client.py
frontend/: .env.example  AGENT_GUIDE.md  AGENT_PROMPT.md
frontend/src/: App.tsx  index.css
frontend/src/config/: app.config.ts
frontend/src/hooks/: useAutoFix.ts  useCodeExecution.ts  useCodeGeneration.ts  useDownload.ts  useFileUpload.ts  useInstructionRefine.ts
frontend/src/sample_screens/: sample1.html  sample2.html  sample3.html
frontend/src/services/: apiClient.ts
frontend/src/store/: codeStore.ts  (+3 more)
scripts/: commit.sh  manage.py
(+14 files in other folders)
