[tool.poetry]
name = "ai-code-builder-backend"
version = "1.0.0"
description = "AI-Powered Code Builder — FastAPI backend"
authors = ["MJ <mail2sjmj@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.30.0", extras = ["standard"] }
python-multipart = ">=0.0.9"
anthropic = ">=0.34.0"
pandas = ">=2.2.0"
openpyxl = ">=3.1.0"
pyarrow = ">=16.0.0"
RestrictedPython = ">=7.1"
pydantic-settings = ">=2.4.0"
python-dotenv = ">=1.0.0"
aiofiles = ">=23.0.0"
python-magic-bin = { version = ">=0.4.14", markers = "sys_platform == 'win32'" }
python-magic = { version = ">=0.4.27", markers = "sys_platform != 'win32'" }
sqlalchemy = { version = ">=2.0.0", extras = ["asyncio"] }
asyncpg = ">=0.29.0"
alembic = ">=1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27.0"
pytest-cov = ">=5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
